feat(setup-assistant): Add new Setup Assistant component, new modifiers for progress ring and indicator (#3144)
Add 'slds-progress-ring_large' modifier to make a 32x32 ring
Add 'slds-progress-ring_active-step' to make progress ring blue
Add 'slds-progress__list-bordered' to add borders b/w vertical progress indicator steps

--- a/packages/design-system/ui/components/progress-indicator/docs.mdx
+++ b/packages/design-system/ui/components/progress-indicator/docs.mdx
@@ -200,7 +200,7 @@ To create a green completed step, the `.slds-progress__item` element should also
 <Example title="Progress Indicator Vertical Success">
   <CodeView style={{height: '200px'}}>
     <VerticalProgress value="25">
-      <VerticalStep done isSuccess>Step 1</VerticalStep>
+      <VerticalStep done hasSuccessMarker>Step 1</VerticalStep>
       <VerticalStep active>Step 2</VerticalStep>
       <VerticalStep>Step 3</VerticalStep>
       <VerticalStep>Step 4</VerticalStep>
