Cherry pick spring 18 changes into summer 18 (#3155)
* Cherry pick RTE update

* Cherry pick global header updates

--- a/packages/design-system/ui/components/branding/docs.mdx
+++ b/packages/design-system/ui/components/branding/docs.mdx
@@ -2,7 +2,7 @@ import Page from './docs/Page';
 import Token, { Tokens } from './docs/Token';
 import { Button } from '../buttons/base/example';
 import ButtonIcon from '../button-icons/';
-import GlobalHeader from '../global-header/';
+import { GlobalHeader } from '../global-header/base/example';
 import { ContextBar } from '../global-navigation/navigation-bar/example';
 import { ContextTabBar, ContextTab, ContextTabPanel } from '../global-navigation/navigation-tab-bar/example';
 import { FormElement } from '../form-element/base/example';
@@ -60,10 +60,14 @@ This page is for informational purposes only.
 ### Header Brand colors
 <Tokens open>
   <Token token="BRAND_HEADER" grid />
-  <Token token="BRAND_HEADER_ICON" grid />
-  <Token token="BRAND_HEADER_ICON_ACTIVE" grid />
   <Token token="BRAND_HEADER_CONTRAST" grid />
   <Token token="BRAND_HEADER_CONTRAST_ACTIVE" grid />
+  <Token token="BRAND_HEADER_CONTRAST_WEAK" grid />
+  <Token token="BRAND_HEADER_CONTRAST_WEAK_ACTIVE" grid />
+  <Token token="BRAND_HEADER_CONTRAST_COOL" grid />
+  <Token token="BRAND_HEADER_CONTRAST_COOL_ACTIVE" grid />
+  <Token token="BRAND_HEADER_CONTRAST_WARM" grid />
+  <Token token="BRAND_HEADER_CONTRAST_WARM_ACTIVE" grid />
 </Tokens>
 
 ### Background Brand colors
@@ -81,8 +85,12 @@ This page is for informational purposes only.
 
 <Tokens>
   <Token token="BRAND_HEADER" />
-  <Token token="BRAND_HEADER_ICON" />
-  <Token token="BRAND_HEADER_ICON_ACTIVE" />
+  <Token token="BRAND_HEADER_CONTRAST_WEAK" />
+  <Token token="BRAND_HEADER_CONTRAST_WEAK_ACTIVE" />
+  <Token token="BRAND_HEADER_CONTRAST_COOL" grid />
+  <Token token="BRAND_HEADER_CONTRAST_COOL_ACTIVE" grid />
+  <Token token="BRAND_HEADER_CONTRAST_WARM" grid />
+  <Token token="BRAND_HEADER_CONTRAST_WARM_ACTIVE" grid />
 </Tokens>
 
 ## Global Navigation
